Update and rename python-package-conda.yml to checkv2.yml

--- a/.github/workflows/checkv2.yml
+++ b/.github/workflows/checkv2.yml
@@ -1,8 +1,8 @@
-name: Python Package using Conda
+name: autocheck
 
 on:
   schedule:
-    - cron: '29 17,18 * * *'
+    - cron: '29 9,10 * * *'
 
 jobs:
   build-linux:
