--- a/.github/workflows/checkv2.yml
+++ b/.github/workflows/checkv2.yml
@@ -2,12 +2,12 @@ name: autocheck
 
 on: push
 
-jobs:
-  build-linux:
+jobs: 
+  check: 
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout
+      uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
