--- a/.github/workflows/checkv2.yml
+++ b/.github/workflows/checkv2.yml
@@ -12,8 +12,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: ins
-      run: pip install requests
+    - name: install dep
+      run: |
+          python -m pip install --upgrade pip
+          pip install requests
     - name: check
       run: python checkv2.py
       
