--- a/.github/workflows/checkv2.yml
+++ b/.github/workflows/checkv2.yml
@@ -1,6 +1,8 @@
 name: autocheck
 
-on: push
+on: 
+  schedule: 
+    - cron: '29 9,10 * * *'
 
 jobs: 
   check: 
@@ -17,7 +19,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
     - name: check
-      run: |
-          python test.py
-          python ./checkv2.py
+      run: python checkv2.py
       
