--- a/.github/workflows/checkv2.yml
+++ b/.github/workflows/checkv2.yml
@@ -19,5 +19,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests
     - name: check
+      env: 
+        YOUR_PWD: ${{ secrets.YOUR_PWD }}
+        TOKEN: ${{ secrets.TOKEN }}
       run: python checkv2.py
       
