--- a/.github/workflows/checkv2.yml
+++ b/.github/workflows/checkv2.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: install dep
+    - name: install requirement
       run: |
           python -m pip install --upgrade pip
           pip install requests
