--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,9 @@
 name: autocheck
 
 on: 
-  schedule: 
-    - cron: '1,10 9,10 * * *'
+    push
+#   schedule: 
+#     - cron: '1,10 9,10 * * *'
 
 jobs: 
   check: 
